# dpm

./: .gitignore  Makefile.am  configure.ac
aux/: Makefile.am  cmake.mk  dpm.mk  gnu.mk  meson.mk  patch.mk
lib/: .gitignore
m4/: .gitignore  gnulib-cache.m4
src/: Makefile.am  build.c  download.c  download.h  install.c  list.c  list.h  main.c  package.c  package.h  repo.c  repo.h  version.c  version.h
